--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-imageio==2.33.1
-matplotlib==3.8.0
-numpy==2.0.0
-Pillow==10.4.0
-scikit_learn==1.2.2
-setuptools==68.2.2
+h5py==3.11.0
+imageio==2.35.1
+matplotlib==3.9.2
+numpy==2.1.2
+opencv_python==4.10.0.84
+Pillow==11.0.0
+psutil==6.0.0
+scikit_learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+setuptools==75.1.0
+snntorch==0.9.1
+tonic==1.5.0
 torch==2.3.0
-torch_summary==1.4.5
 torchvision==0.18.0
-tqdm==4.65.0
+tqdm==4.66.5
